crates/agentd/tests/snapshots/tui_render__render_empty_state_at_80x24.snap
---
source: crates/agentd/tests/tui_render.rs
assertion_line: 56
expression: s
---
 0 agents · 0 waiting · 0 errored · $0.00                                       
────────────────────────────────────────────────────────────────────────────────
  (no active sessions)                                                          
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
  (select a session)                                                            
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 c=create  r=rename  j=jump  x=kill  ?=help  q=quit
