crates/agentd/tests/snapshots/tui_render__render_one_working_session_at_80x24.snap
---
source: crates/agentd/tests/tui_render.rs
assertion_line: 66
expression: s
---
 1 agents · 0 waiting · 0 errored · $0.12                                       
────────────────────────────────────────────────────────────────────────────────
>  ●  alpha  Working  editing main.rs                                           
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
alpha in /tmp/proj                                                              
  task: editing main.rs                                                         
  tokens: 42000/200000 (21%)                                                    
  cost: $0.12                                                                   
  status: Working                                                               
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 c=create  r=rename  j=jump  x=kill  ?=help  q=quit
